Upgrade to 1.2 version

--- a/release/index.html
+++ b/release/index.html
@@ -287,7 +287,62 @@
 <p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div><div class="ground_available">Ground identified</div>
 </div></div>
 </td>
+
+<tr>
+<td>
+<div onclick="LoadHTMLData('A500_REV8A')" class="board_select btn btn-default">
+<div class="img_div" style="background-image: url(bootstrap/css/gfx/a500r8a.png); float: left;"></div><div class="info_div"><p class="board_title">A500 Rev 8A</p><div>Last known production revision, stripped-down A500+ board.</div>
+<p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div><div class="ground_available">Ground identified</div>
+</div></div>
+</td>
+
+<td>
+<div onclick="LoadHTMLData('A600_REV2A')" class="board_select btn btn-default">
+<div class="img_div" style="background-image: url(bootstrap/css/gfx/a600r2a.png); float: left;"></div><div class="info_div"><p class="board_title">A600 Rev 2A (beta)</p><div>Rev 2 pre-production board, Gayle -02. ATTENTION: Board layout has several issues, use with caution!</div>
+<div style="position: absolute; bottom: 5px;"><p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div><div class="ground_available">Ground identified</div>
+</div></div></div>
+</td>
 </tr>
+
+<tr>
+<td>
+<div onclick="LoadHTMLData('A1200_REV1D1')" class="board_select btn btn-default">
+<div class="img_div" style="background-image: url(bootstrap/css/gfx/a1200r1d1.png); float: left;"></div><div class="info_div"><p class="board_title">A1200 Rev 1D.1 (beta)</p><div>Common production revision, has half-length clockport header. Mouse port connected via ribbon cable.</div>
+<div style="position: absolute; bottom: 5px;"><p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div><div class="ground_available">Ground identified</div>
+</div></div></div>
+</td>
+
+<td>
+<div class="board_select btn btn-default">
+<div onclick="LoadHTMLData('A1200_REV2B')" class="img_div" style="background-image: url(bootstrap/css/gfx/a1200r2b.png); float: left;"></div><div class="info_div"><p class="board_title">A1200 Rev 2B</p><div>Late production revision, uses 512k x 8 DRAM chips and Budgie Rev.A. Mouse port on separate panel.</div>
+<div style="position: absolute; bottom: 5px;"><p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div><div class="ground_available">Ground identified</div>
+</div></div></div>
+</td></tr>
+
+<tr><td>
+<div onclick="LoadHTMLData('A4000D_REV2')" class="board_select btn btn-default">
+<div class="img_div" style="background-image: url(bootstrap/css/gfx/a4kr2.png); float: left;"></div><div class="info_div"><p class="board_title">A4000D Rev 2</p><div>Early production revision, NiCd battery.</div>
+<div style="position: absolute; bottom: 5px;"><p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div>
+</div></div></div>
+</td>
+
+<td>
+<div onclick="LoadHTMLData('A4000T_REV4')" class="board_select btn btn-default">
+<div class="img_div" style="background-image: url(bootstrap/css/gfx/a4ktr4.png); float: left;"></div><div class="info_div"><p class="board_title">A4000T Rev.4 (beta)</p><div>Late production revision. Board has MAJOR issues(like original data).</div>
+<div style="position: absolute; bottom: 5px;"><p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div>
+</td></tr>
+
+<tr><td>
+<div onclick="LoadHTMLData('CD32_REV3')" class="board_select btn btn-default">
+<div class="img_div" style="background-image: url(bootstrap/css/gfx/cd32r3.png); float: left;"></div><div class="info_div"><p class="board_title">CD32 Rev 3 (beta)</p><div>First production revision.</div>
+<div style="position: absolute; bottom: 5px;"><p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div>
+</td>
+
+<td>
+<div onclick="LoadHTMLData('CD32_REV41')" class="board_select btn btn-default">
+<div class="img_div" style="background-image: url(bootstrap/css/gfx/cd32r4.png); float: left;"></div><div class="info_div"><p class="board_title">CD32 Rev 4.1 (beta)</p><div>Late production revision known as "French version". Expansion port pads are not clickable at the moment.</div>
+<div style="position: absolute; bottom: 5px;"><p>PCB data availability:</p><div class="board_status_available">Layout</div><div class="board_status_available">Netlist</div><div class="board_status_available">Components</div>
+</td></tr>
 </table>
 
 </div>
